pinch and zoom images

--- a/Astronomy Combo/Astronomy Combo/Misc/Base.lproj/Main.storyboard
+++ b/Astronomy Combo/Astronomy Combo/Misc/Base.lproj/Main.storyboard
@@ -98,27 +98,39 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uLW-v1-xNu">
-                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
-                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ty9-WA-Zx7">
+                                <rect key="frame" x="0.0" y="155" width="414" height="741"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uLW-v1-xNu">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <viewLayoutGuide key="contentLayoutGuide" id="Uxu-iq-0f1"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="9k7-Gc-Uqq"/>
+                                <connections>
+                                    <outlet property="delegate" destination="QRN-2K-8ia" id="AGN-16-aII"/>
+                                </connections>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="uLW-v1-xNu" secondAttribute="bottom" id="33c-cx-unG"/>
-                            <constraint firstItem="uLW-v1-xNu" firstAttribute="leading" secondItem="zA5-HR-yue" secondAttribute="leading" id="D6u-Uq-WsG"/>
-                            <constraint firstItem="uLW-v1-xNu" firstAttribute="top" secondItem="zA5-HR-yue" secondAttribute="top" id="FrH-ag-oI3"/>
-                            <constraint firstAttribute="trailing" secondItem="uLW-v1-xNu" secondAttribute="trailing" id="eIW-RQ-sbp"/>
+                            <constraint firstAttribute="bottom" secondItem="ty9-WA-Zx7" secondAttribute="bottom" id="49A-yo-7VF"/>
+                            <constraint firstItem="ty9-WA-Zx7" firstAttribute="top" secondItem="zA5-HR-yue" secondAttribute="top" id="HxK-KO-9zr"/>
+                            <constraint firstItem="ty9-WA-Zx7" firstAttribute="leading" secondItem="UVx-aR-tKB" secondAttribute="leading" id="YYf-Fe-4MU"/>
+                            <constraint firstAttribute="trailing" secondItem="ty9-WA-Zx7" secondAttribute="trailing" id="pEm-BD-dOc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="zA5-HR-yue"/>
                     </view>
                     <navigationItem key="navigationItem" id="ToG-fj-ePe"/>
                     <connections>
                         <outlet property="imageView" destination="uLW-v1-xNu" id="hhc-1o-zDs"/>
+                        <outlet property="scrollView" destination="ty9-WA-Zx7" id="rKF-xR-JYb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mLv-6s-hhw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1881" y="137"/>
+            <point key="canvasLocation" x="1879.7101449275365" y="136.60714285714286"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="sIz-bt-hbS">
