--- a/iOS9-Astronomy/iOS9-Astronomy/Storyboards/Base.lproj/Main.storyboard
+++ b/iOS9-Astronomy/iOS9-Astronomy/Storyboards/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="marvin" translatesAutoresizingMaskIntoConstraints="NO" id="3OH-No-vxN">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="marvin" translatesAutoresizingMaskIntoConstraints="NO" id="3OH-No-vxN">
                                             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                         </imageView>
                                     </subviews>
