--- a/iOS9-Astronomy/iOS9-Astronomy/Storyboards/Base.lproj/Main.storyboard
+++ b/iOS9-Astronomy/iOS9-Astronomy/Storyboards/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Photos Collection View Controller-->
+        <!--Title-->
         <scene sceneID="j1W-dD-DzB">
             <objects>
                 <collectionViewController id="ND3-PK-9hM" customClass="PhotosCollectionViewController" customModule="iOS9_Astronomy" customModuleProvider="target" sceneMemberID="viewController">
@@ -20,11 +20,11 @@
                             <size key="itemSize" width="50" height="50"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="20"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MarsPhotoCell" id="3NC-Zs-Zij" customClass="PhotoCollectionViewCell" customModule="iOS9_Astronomy" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                <rect key="frame" x="20" y="20" width="150" height="150"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="JbB-EG-3Mj">
                                     <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
@@ -32,6 +32,10 @@
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="marvin" translatesAutoresizingMaskIntoConstraints="NO" id="3OH-No-vxN">
                                             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="150" id="6ob-3B-108"/>
+                                                <constraint firstAttribute="width" constant="150" id="a78-hg-Skr"/>
+                                            </constraints>
                                         </imageView>
                                     </subviews>
                                     <constraints>
@@ -53,7 +57,12 @@
                             <outlet property="delegate" destination="ND3-PK-9hM" id="9xj-0l-f3B"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="1wm-CL-r5J"/>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Title" id="6mX-JE-i4s">
+                        <barButtonItem key="leftBarButtonItem" title="&lt;" id="Efg-Q2-VPP"/>
+                        <barButtonItem key="rightBarButtonItem" title="&gt;" width="6" id="1B6-BG-bFn"/>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZeL-9S-hFl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -104,6 +113,9 @@
                                             <constraint firstAttribute="height" constant="30" id="Obe-sB-5Lu"/>
                                         </constraints>
                                         <state key="normal" title="Save to Photo Library"/>
+                                        <connections>
+                                            <action selector="saveButtonTapped:" destination="4Ll-Sp-6qD" eventType="touchUpInside" id="YUR-WI-aZf"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -120,6 +132,11 @@
                         <viewLayoutGuide key="safeArea" id="LKO-Y6-BdU"/>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="wJv-sB-lz0"/>
+                    <connections>
+                        <outlet property="cameraLabel" destination="SGR-C1-VSq" id="Y6a-A7-vVe"/>
+                        <outlet property="imageView" destination="wkf-Dr-bSj" id="Y8C-mq-Y4R"/>
+                        <outlet property="roverLabel" destination="jGa-9H-38i" id="vbo-IJ-GDO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iCe-KN-oqo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
