--- a/Astronomy-Hybrid/Astronomy-Hybrid/Base.lproj/Main.storyboard
+++ b/Astronomy-Hybrid/Astronomy-Hybrid/Base.lproj/Main.storyboard
@@ -1,8 +1,98 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SqF-jb-xRB">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Rover Images-->
+        <scene sceneID="IGF-8X-Djr">
+            <objects>
+                <viewController id="S7r-Wg-1bH" customClass="PhotosCollectionViewController" customModule="Astronomy" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="lyl-2h-S5Z"/>
+                        <viewControllerLayoutGuide type="bottom" id="JXy-I5-0Ci"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="aua-vf-B3I">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="15S-WU-JNI">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8xF-Sb-dPn">
+                                    <size key="itemSize" width="150" height="150"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageCell" id="NX1-1M-P5Z" customClass="ImageCollectionViewCell" customModule="Astronomy" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fZb-4U-5tO">
+                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="fZb-4U-5tO" secondAttribute="trailing" id="8he-gI-O1W"/>
+                                            <constraint firstItem="fZb-4U-5tO" firstAttribute="leading" secondItem="NX1-1M-P5Z" secondAttribute="leading" id="Szp-7E-DOi"/>
+                                            <constraint firstItem="fZb-4U-5tO" firstAttribute="top" secondItem="NX1-1M-P5Z" secondAttribute="top" id="f1d-p5-vKq"/>
+                                            <constraint firstAttribute="bottom" secondItem="fZb-4U-5tO" secondAttribute="bottom" id="tE9-yc-0hg"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="fZb-4U-5tO" id="hez-Ts-RDj"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="S7r-Wg-1bH" id="c1D-0L-Onv"/>
+                                    <outlet property="delegate" destination="S7r-Wg-1bH" id="uZ6-VO-9Me"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="15S-WU-JNI" secondAttribute="trailing" id="5jb-Ux-U07"/>
+                            <constraint firstItem="JXy-I5-0Ci" firstAttribute="top" secondItem="15S-WU-JNI" secondAttribute="bottom" id="I7z-3G-hym"/>
+                            <constraint firstItem="15S-WU-JNI" firstAttribute="top" secondItem="aua-vf-B3I" secondAttribute="top" id="Lm7-P2-yWo"/>
+                            <constraint firstItem="15S-WU-JNI" firstAttribute="leading" secondItem="aua-vf-B3I" secondAttribute="leading" id="ZFy-iZ-iZz"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="P75-kh-AqD"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Rover Images" id="X2r-yH-PM0"/>
+                    <connections>
+                        <outlet property="collectionView" destination="15S-WU-JNI" id="lY3-xd-y8v"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="174-3P-HVb" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1073.913043478261" y="117.1875"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="zEq-Vw-bdX">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SqF-jb-xRB" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rnT-EJ-SmJ">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="S7r-Wg-1bH" kind="relationship" relationship="rootViewController" id="fUF-jZ-dek"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QWT-UT-pfo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="163.768115942029" y="117.1875"/>
+        </scene>
+    </scenes>
 </document>
